# webrtc-desktop

./: .gitignore  CMakeLists.txt  build-linux.sh  build-osx.sh  build-win.bat  build-win.sh
cmake/: ios.cmake  linux-x86.cmake
cmake/Modules/: Findjsoncpp.cmake
cpp/: CMakeLists.txt
cpp/tests/: CMakeLists.txt  DataChannelInterfaceMock.h  PeerConnectionFactoryInterfaceMock.h  PeerConnectionMock.h  SandBoxTest.cpp  WebRtcChannelFactoryMock.h  WebRtcChannelListenerMock.h  WebRtcChannelMock.h  WebRtcChannelTest.cpp  WebRtcConnectionFactoryMock.h  WebRtcConnectionListenerMock.h  WebRtcConnectionMock.h  WebRtcConnectionPoolFactoryMock.h  WebRtcConnectionPoolListenerMock.h  WebRtcConnectionPoolMock.h  WebRtcConnectionPoolTest.cpp  WebRtcConnectionTest.cpp  WebRtcListenerMock.h  WebRtcProxyFactoryMock.h  WebRtcProxyMock.h  WebRtcProxyTest.cpp  WebRtcTest.cpp  main.cpp
cpp/webrtcapi/: RefPtrDisposer.h  WebRtcChannel.cpp  WebRtcChannel.h  WebRtcChannelFactory.cpp  WebRtcChannelFactory.h  WebRtcChannelListener.h  WebRtcConnection.cpp  WebRtcConnection.h  WebRtcConnectionFactory.cpp  WebRtcConnectionFactory.h  WebRtcConnectionListener.h  WebRtcConnectionPool.cpp  WebRtcConnectionPool.h  WebRtcConnectionPoolFactory.cpp  WebRtcConnectionPoolFactory.h  WebRtcConnectionPoolListener.h  WebRtcProxy.cpp  WebRtcProxy.h  WebRtcProxyFactory.cpp  WebRtcProxyFactory.h  webrtc_api.cpp  webrtc_api.h
python/: CMakeLists.txt  configure-linux.py  configure-linux_x86.py  configure-osx.py  configure-win.py  webrtc.sip
